Fix footer spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,10 @@ header {
   padding-top: 28px;
 }
 
+footer {
+  padding: 0px 16px;
+}
+
 .top {
   margin-top: 1rem;
   margin-bottom: 1rem;
